added neccessary view pages for different views that the user will need to see. Added temp routes to test each page. all pages are properly structured. Will need to change contents in some view pages to be able to load content dynamically.

--- a/views/comment.handlebars
+++ b/views/comment.handlebars
@@ -1,6 +1,6 @@
-{{! 750 max char count in card body }}
         <h2 class="blog-header">The Tech Blog</h2>
       </nav>
     </header>
 <main>
-{{> post-details}}
+    {{> post-details}}
+    {{> comment-details}}
