worked on home-routes.js file to add more endpoint functionality.

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -3,4 +3,6 @@
     </header>
 <main>
     <a class="new-post" href="#">+ New Post</a>
+    {{#each posts}}
     {{> dashboard-details}}
+    {{/each}}
