--- a/views/view-post.handlebars
+++ b/views/view-post.handlebars
@@ -2,7 +2,7 @@
       </nav>
     </header>
 <main>
-{{> post-details}}
+{{> one-post-details}}
 <div class="login-card">
   <div class="login-card-header"></div>
   <div class="comment-card-form">
