--- a/views/partials/dashboard-details.handlebars
+++ b/views/partials/dashboard-details.handlebars
@@ -1,6 +1,6 @@
 <a class="users-post-link" href="#">
   <div class="users-post">
-    <h1>Post Name</h1>
-    <h2>Post Date</h2>
+    <h1>{{title}}</h1>
+    <h2>{{format_date createdAt}}</h2>
   </div>
 </a>
