seperated login and logout functions into seperate files, added script to view comments in a given post. Logout button only will appear when the user is logged in

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,6 +32,12 @@ header {
   margin: 30px;
 }
 
+.nav-links button {
+  background-color: var(--primary-dark);
+  border: none;
+  cursor: pointer;
+}
+
 .blog-header {
   background-color: var(--primary-light);
   font-size: 300%;
