--- a/views/partials/comment-details.handlebars
+++ b/views/partials/comment-details.handlebars
@@ -1,8 +1,8 @@
 <div class="post-card">
   <div class="post-card-header"></div>
   <div class="post-card-body">
-    <p>This is a test comment</p>
+    <p>{{description}}</p>
 
-    <p>- Comment by blah blah, 0/00/0000</p>
+    <p>- Comment by {{user.username}}, {{format_date createdAt}}</p>
   </div>
 </div>
