--- a/views/partials/all-posts-details.handlebars
+++ b/views/partials/all-posts-details.handlebars
@@ -1,5 +1,5 @@
 <div class="post-card">
-  <a href="#">
+  <a href="/post/{{id}}">
     <div class="post-card-header">
       <h3>{{title}}</h3>
       <h4>Posted by
