added additional js files that addresses functionality based on page rendered. Added functionality for posting/deleting/updating posts, adding comments, and viewing individual posts. Created appropiate routes to handle specific requests and added a new api route folder to handle info based requests. Finally I added a maxAge to the cookie of approximately 24 hours.

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,7 +2,7 @@
       </nav>
     </header>
 <main>
-    <a class="new-post" href="#">+ New Post</a>
+    <a class="new-post" href="/new">+ New Post</a>
     {{#each posts}}
     {{> dashboard-details}}
     {{/each}}
