--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -37,3 +37,7 @@
           </form>
         </div>
       </div>
+
+<script src="/js/edit-post.js"></script>
+<script src="/js/update-post.js"></script>
+<script src="/js/delete.js"></script>
