--- a/views/partials/dashboard-details.handlebars
+++ b/views/partials/dashboard-details.handlebars
@@ -1,4 +1,4 @@
-<a class="users-post-link" href="#">
+<a class="users-post-link" href="/edit/{{id}}">
   <div class="users-post">
     <h1>{{title}}</h1>
     <h2>{{format_date createdAt}}</h2>
