fixed minor bug that made 'tech blog' an anchor when it wasnt supposed to be

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
           {{#if loggedIn}}
           <button><h1 id="logout">Logout</h1></button>
           {{else}}
-          <a href="/login"><h1>Login</h1> 
+          <a href="/login"><h1>Login</h1></a> 
           {{/if}}
         </div>
         {{!-- <h2 class="blog-header">The Tech Blog</h2>
